--- a/src/index.css
+++ b/src/index.css
@@ -15,5 +15,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: url(./assets/background.png) no-repeat center center fixed;
+  /*make background less black, lighter*/
+  backdrop-filter: contrast(0.1) brightness(1.7);
 }
 
