--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url(./assets/background.png) no-repeat center center fixed;
+  background: url(./assets/background.png) center center fixed;
   /*make background less black, lighter*/
   backdrop-filter: contrast(0.1) brightness(1.7);
 }
