--- a/src/pages/MainPage/MainPage.css
+++ b/src/pages/MainPage/MainPage.css
@@ -32,3 +32,21 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
+
+.td_no_tasks {
+    font-size: 1.5rem;
+    font-weight: lighter;
+    color: rgb(153, 150, 150);
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.td_no_tasks h1 {
+    font-size: 3rem;
+    font-weight: lighter;
+    color: rgb(156, 156, 156);
+}
